Added username to template

--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -9,7 +9,8 @@
 	<% images.forEach(function(image) { %>
 		<section>
 			<img src="<%= image.filename %>" alt="">
-			<p><%= image.caption%></p>
+			<p><%= image.caption %></p>
+			<p><%= image.username %></p>
 		</section>
 	<% }) %>
     
