Completed image rendering on single and gallery
Generated one layout chunk for both views

--- a/views/gallery/image.ejs
+++ b/views/gallery/image.ejs
@@ -5,10 +5,4 @@
     <h2><%= message %></h2>
 <% } %>
 
-<% if (locals.image) { %>
-	<section>
-		<img src="/<%= image.filename %>" alt="">
-		<p><%= image.caption %></p>
-		<p><%= image.username %></p>
-	</section>
-<% } %>
+<%= include ../layout/image %>
