--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -5,13 +5,4 @@
     <h2><%= message %></h2>
 <% } %>
 
-<% if (locals.images) { %>
-	<% images.forEach(function(image) { %>
-		<section>
-			<img src="<%= image.filename %>" alt="">
-			<p><%= image.caption %></p>
-			<p><%= image.username %></p>
-		</section>
-	<% }) %>
-    
-<% } %>
+<%= include ../layout/image %>
