Fixed header and footer + linked a stylesheet

--- a/views/gallery/image.ejs
+++ b/views/gallery/image.ejs
@@ -1,4 +1,5 @@
-<!-- Gallery Overview -->
+<%= include ../layout/header %>
+<!-- Single Image -->
 <h1>Image</h1>
 
 <% if (locals.message) { %>
@@ -6,3 +7,5 @@
 <% } %>
 
 <%= include ../layout/image %>
+
+<%= include ../layout/footer %>
