--- a/views/gallery/index.ejs
+++ b/views/gallery/index.ejs
@@ -1,3 +1,4 @@
+<%= include ../layout/header %>
 <!-- Gallery Overview -->
 <h1>Gallery</h1>
 
@@ -6,3 +7,5 @@
 <% } %>
 
 <%= include ../layout/image %>
+
+<%= include ../layout/footer %>
