--- a/views/upload/index.ejs
+++ b/views/upload/index.ejs
@@ -1,3 +1,4 @@
+<%= include ../layout/header %>
 <!-- Upload Form -->
 <h1>Upload Photo</h1>
 
@@ -17,6 +18,7 @@
     </div>
 
     <div>
-      <button type="submit">Save</button>
+      <button type="submit">Upload</button>
     </div>
 </form>
+<%= include ../layout/footer %>
