--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Server-side scripting</title>
+		<title>Photo Share - Server-side scripting</title>
 		<link rel='stylesheet' href='css/style.css' />
 	</head>
 	<body>
