--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -3,17 +3,26 @@
 	<head>
 		<title>Photo Share - Server-side scripting</title>
 		<link rel='stylesheet' href='/css/style.css' />
-		<nav>
-			<ul>
-				<li><a href="/gallery">Gallery</a></li>
-				<li><a href="/users">Profile</a></li>
-				<% if (req.session.userId) { %>
-					<li><a href="/upload">Upload</a></li>
-				<% } %>
-			</ul>
-		</nav>
 	</head>
 	<body>
-		<% if (req.session.userId) { %>
-   			<h2>Logged in as user test text</h2>
-		<% } %>
+		<header>
+			<nav>
+				<ul>
+					<li><a href="/gallery">Gallery</a></li>
+					<li><a href="/users">Profile</a></li>
+					<% if (req.session.userId) { %>
+						<li><a href="/upload">Upload</a></li>
+					<% } %>
+				</ul>
+			</nav>	
+		</header>
+		<main>
+			<% if (locals.title) { %>
+	    		<h1><%= title %></h1>
+			<% } %>
+			<% if (locals.message) { %>
+	    		<h2><%= message %></h2>
+			<% } %>
+			<% if (req.session.userId) { %>
+	   			<h2>Logged in as user test text</h2>
+			<% } %>
