--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,6 +1,6 @@
 	 	</main>
 	 	<footer>
-	 		<p>Footer</p>
+	 		<span>Created by Sem Bakkum &amp; Stef van Dijk - For CMD @ HvA - ServersideScripting 2014/2015</span>
 	 	</footer>
 	</body>
 </html>
