--- a/views/layout/image.ejs
+++ b/views/layout/image.ejs
@@ -12,7 +12,10 @@
 			<p><%= image.caption %></p>
 			<p><%= image.username %></p>
 		</section>
-		<% if(images.length == 1) { %>
+		<% if(images.length == 1) {console.log(image) %>
+			<% if (image.owner == true || req.session.user_lever >= 9) { %>
+				<a href="<%= req.baseUrl + "/image" %>/<%= image.id %>/edit">Edit as <%= req.session.userId %></a>
+			<% } %>
 			<% if (locals.comments && locals.comments.length >= 1) { %>
 				<section>
 					<h2>Comments</h2>
