--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <%= include ../layout/header %>
 
-<form action="<%= req.baseUrl + "/login" %>" method="post">
-  <input type="email" name="username" value="">
+<form action="<%= req.baseUrl + "/" %>" method="post">
+  <input type="email" name="useremail" value="">
   <input type="password" name="password" value="">
   <button>Login!</button>
 </form>
