Fixed 404 error handling

--- a/views/layout/404.ejs
+++ b/views/layout/404.ejs
@@ -1,4 +1,8 @@
 <%= include ../layout/header %>
 <!-- 404 Page -->
 
+<% if (req.session.error) { %>
+	<p><%= req.session.error %></p>
+<% } %>
+
 <%= include ../layout/footer %>
