--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,3 +1,6 @@
 <%= include ../layout/header %>
-profile
+
+<h1>Profilepage</h1>
+<p>Welcome, <%= req.session.username %></p>
+
 <%= include ../layout/footer %>
